--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Txreex/Project-Ejaculation#readme",
   "dependencies": {
-    "electron": "^30.0.3"
+    "electron": "^30.0.3",
+    "node-fetch": "^2.7.0"
   }
 }
